complete video player

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             ></video>
             <nav class="video-navigation">
               <button
-                class="video-button video-button__play fa fa-play"
+                class="video-button video-button__play fa fa-pause"
               ></button>
               <button
                 class="video-button video-button__stop fa fa-stop"
