compelte players and add webpack

--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <title>ЯTunes</title>
-    <script src="./script/index.js" type="module" defer></script>
+    <script src="./dist/script.js" defer></script>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/font-awesome.min.css" />
     <link rel="stylesheet" href="styles/style.min.css" />
   </head>
-
   <body>
     <a href="index.html">
       <h1 class="header"><span class="red-text">Я</span>Tunes</h1>
